feat: analyze time series events
